# CacheBenchMark

./: CMakeLists.txt  README.md  build.sh
benchmark/: cachebench.cpp  cachebench_2.cpp
data/benchmark/HEAP_3files_100K_records_duplicate/: input_1.txt  output.txt
data/benchmark/MAP_3files_100K_records/: input_1.txt  output.txt
data/benchmark/MAP_3files_100K_records_duplicate/: input_0.txt  input_2.txt
data/test/test1/input/: a.txt  b.txt
data/test/test1/output/: output.txt
data/test/test2/input/: a.txt  b.txt
